Anmeldung und konfig für XP geändert

--- a/anmeldung/konfig.tex
+++ b/anmeldung/konfig.tex
@@ -37,6 +37,9 @@ Tat alles ok sein.
 \subsubsection{Windows 7}
 
 \subsubsection{Linux}
+\small{Wie schon bei der MAC-Adresse gilt: Je nach Distribution kann es kleinere Unterschiede
+geben. Die folgende Anleitung wurde für Debian und Ubuntu getestet und
+sollte sich leicht an andere Distributionen anpassen lassen.}
 Die folgenden Einstellungen müssen als Administrator (,,root'') vorgenommen
 werden. Je nach Distribution ist es dazu erforderlich, sich als root
 anzumelden, oder anderweitig als Administrator auszuweisen. In Ubuntu
@@ -302,6 +305,9 @@ einzutragen.
 % \subauthor{Roland Damm}
 \newpage
 \subsubsection{Linux}
+\small{Auch hier gilt: Je nach Distribution kann es kleinere Unterschiede
+geben. Die folgende Anleitung wurde für Debian und Ubuntu getestet und
+sollte sich leicht an andere Distributionen anpassen lassen.}
 Auch bei der manuellen Konfiguration werden Adminrechte benötigt. 
 Mit diesen versehen bearbeitet man dann die Datei
 \texttt{/etc/network/interfaces}, die danach so aussehen sollte:
