--- a/dienste/benutzerserver.tex
+++ b/dienste/benutzerserver.tex
@@ -1,6 +1,6 @@
 
 \subsection{Benutzerserver (\texttt{jupiter.schunter.etc.tu-bs.de})}
-
+\label{benutzerserver}
 \subsubsection{Zugriff auf das Homedirectory}
 
 Wie so oft gibt es auch hier mehrere M"oglichkeiten: 
