--- a/anmeldung/netzwerk_mac.tex
+++ b/anmeldung/netzwerk_mac.tex
@@ -24,32 +24,28 @@ durch ein Service--Programm.%, welches auf der mitgelieferten Diskette
 Die Adresse kann z.B. so aussehen: \texttt{00:12:6b:9f:20:cc}
 Je nach Betriebssystem gibt es mehrere Möglichkeiten, die MAC-Adresse
 herauszufinden.
-
-% \subsubsection*{Windows 95/98/NT}
-
-% Benutzer von Windows 95/98 haben  eine weitere recht einfache
-% M"oglichkeit. Das Programm winipcfg.exe im Windows--Verzeichnis (meist
-% \verb#C:\WINDOWS#) zeigt Informationen "uber den Netzwerkanschluss
-% an, unter anderem auch die Hardwareadresse. Wichtig ist hierbei, da"s im
-% entsprechenden Auswahlfeld die Ethernet-Netzwerkkarte angew"ahlt ist (die
-c% PPP-Adresse 44:45:53:54:00:00 ist \textbf{nicht} die gesuchte)
-% Unter Windows NT findet sich das dazu n"otige Programm im Startmen"u unter
-% Programme/Verwaltung (Allgemein)/Windows NT-Diagnose. Hier steht die
-% MAC-Adresse auf der Seite "`Netzwerk"' und da "uber den Button "`Transporte"'.
-
+\newpage
 \subsubsection*{Windows XP}
 
 Unter Windows XP wählt man \fbox{Startmenü} $\Rightarrow$
 \fbox{Ausführen}.  In das sich öffnende Fenster tippt man  \texttt{cmd}
-ein und bestätigt dies durch einen Klick auf \fbox{Ok}. In die sich
+ein und bestätigt dies durch einen Klick auf \fbox{Ok}:
+\centergraphics{cmd_xp}
+ In die sich
 nun öffnende Eingabeaufforderung gibt man den Befehl \texttt{ipconfig /all}
-ein. %Illustrierende Bilder
-
+ein: %Illustrierende Bilder
+\centergraphics{mac_xp}
+Nun muss man aufpassen, dass man nicht die falsche MAC-Adresse, z.B
+der WLAN-Karte erwischt. Gesucht wird die der Ethernetkarte. Im
+Screenshot wäre dies zum Beispiel der \\texttt{,,Ethernetadapter LAN-Verbindung
+2''}. Die MAC-Adresse selbst verbirgt sich hinter der psysikalischen
+Adresse, hier also: \texttt{,,0B-00-27-FC-09-51''}.
 \subsubsection*{Windows Vista/7}
 
-
+% Leute wegen Screenshots nerven
+% ggf. in der Uni machen?
 \subsubsection*{Mac OS}
-
+% dito
 % In einer \glossar Sprechstunde sah ich, wie eine Benutzerin die MAC über den
 % Apple System Profiler herausfand, würde das gerne mal anhand des
 % Minis nachvollziehen und fotografisch aufbereiten :)
@@ -61,12 +57,24 @@ Kontrollfeld "`TCP/IP"' aufruft und dessen INFO-Button anw"ahlt. Die hier
 angegebene "`Hardware Adresse"' ist die MAC--Adresse. Alternativ kann die
 MAC--Adresse auch mit dem "`Apple System Profiler"' im Apple--Men"u ermittelt
 werden. 
-
+\newpage
 \subsubsection*{Unix/Linux}
-Zunächst öffnet man ein Terminal. Dadrin gibt man dann den Befehl 
-. Unter
+\small{Vorbemerkung: Je nach Distribution kann es kleinere Unterschiede
+geben. Die folgende Anleitung wurde für Debian und Ubuntu getestet und
+sollte sich leicht an andere Distributionen anpassen lassen.} Unter
 \glossar UNIX/Linux öffnet man zunächst ein Terminal. Dort gibt man
 dann den Befehl \texttt{ifconfig} ein. Unter Umständen muss der
 absolute Pfad \texttt{ifconfig} benutzt werden. Die Ausgabe könnte so
 aussehen: %insert screenshot mit englischer und deutscher Form!
+\centergraphics{mac_linux}
+Aufpassen muss man nun, dass man nicht die falsche MAC-Adresse
+notiert, z.B. von der WLAN-Karte.
+Gesucht ist die MAC-Adresse der Ethernetkarte. Diese fängt zumeist mit
+,,eth'' an, hier also ,,eth1''.  Davon ist nun die MAC-Adresse
+gesucht, auch ,,HWAddr'' oder ,,Hardwareadresse'' genannt, hier
+also: \texttt{,, 00:15:58:ce:53:14''}. 
 
+%%% Local Variables: 
+%%% mode: latex
+%%% TeX-master: "../Netzeinfuehrung"
+%%% End: 
