--- a/Netzeinfuehrung.tex
+++ b/Netzeinfuehrung.tex
@@ -88,7 +88,7 @@
 %\usepackage{hyperref}
 \begin{document}
 
-\title{\includegraphics[width=8cm]{logo}\\[2cm]
+\title{\includegraphics[width=8cm]{bilder/logo}\\[2cm]
 Einf"uhrung in die Nutzung des\\[5mm]
 \bigbold SchunterNet\\[5mm]
 \normalsize 3. "uberarbeitete Auflage -- Oktober 2009 \vspace{3.3cm}}
@@ -163,6 +163,7 @@ Zukunft auch nicht weiter betrieben werden kann.
 \section{Anmeldung und Netzanschluss}
 \input{anmeldung/nutzervertrag}
 \input{anmeldung/netzwerk_mac}
+\input{anmeldung/manuell}
 \input{anmeldung/ip}  
 \input{anmeldung/kosten}
 \input{anmeldung/konfig}
