--- a/anmeldung/netzwerk_mac.tex
+++ b/anmeldung/netzwerk_mac.tex
@@ -30,33 +30,46 @@ herauszufinden.
 Unter Windows XP wählt man \fbox{Startmenü} $\Rightarrow$
 \fbox{Ausführen}.  In das sich öffnende Fenster tippt man  \texttt{cmd}
 ein und bestätigt dies durch einen Klick auf \fbox{Ok}:
-\centergraphics{cmd_xp}
+\centergraphics[width=\textwidth]{bilder/cmd_xp}
  In die sich
 nun öffnende Eingabeaufforderung gibt man den Befehl \texttt{ipconfig /all}
 ein: %Illustrierende Bilder
-\centergraphics{mac_xp}
+\centergraphics[width=\textwidth]{bilder/mac_xp}
 Nun muss man aufpassen, dass man nicht die falsche MAC-Adresse, z.B
 der WLAN-Karte erwischt. Gesucht wird die der Ethernetkarte. Im
-Screenshot wäre dies zum Beispiel der \\texttt{,,Ethernetadapter LAN-Verbindung
+Screenshot wäre dies zum Beispiel der \texttt{,,Ethernetadapter LAN-Verbindung
 2''}. Die MAC-Adresse selbst verbirgt sich hinter der psysikalischen
 Adresse, hier also: \texttt{,,0B-00-27-FC-09-51''}.
 \subsubsection*{Windows Vista/7}
-
+Unter Windows Vista und Windows7 wählt man \fbox{Startmenü} und gibt in das Suchfeld 
+ \texttt{cmd} ein. In den Ergebnissen wählt man dann die \texttt{cmd.exe} aus:
+\centergraphics[width=\textwidth]{bilder/win7start}
+ In die sich
+nun öffnende Eingabeaufforderung gibt man den Befehl \texttt{ipconfig /all}
+ein: %Illustrierende Bilder
+\centergraphics{bilder/mac_7}
+Nun muss man aufpassen, dass man nicht die falsche MAC-Adresse, z.B
+der WLAN-Karte erwischt. Gesucht wird die der Ethernetkarte. Im
+Screenshot wäre dies zum Beispiel der \texttt{,,Ethernetadapter Local Area Connection''}. 
+Die MAC-Adresse selbst verbirgt sich hinter der psysikalischen
+Adresse, hier %also: \texttt{,,0B-00-27-FC-09-51''}.
+also: \texttt{,, 00:15:58:ce:53:14''}. 
+%In die sich nun öffnende Eingabeaufforderung gibt man den Befehl 
 % Leute wegen Screenshots nerven
 % ggf. in der Uni machen?
-\subsubsection*{Mac OS}
+%\subsubsection*{Mac OS}
 % dito
 % In einer \glossar Sprechstunde sah ich, wie eine Benutzerin die MAC über den
 % Apple System Profiler herausfand, würde das gerne mal anhand des
 % Minis nachvollziehen und fotografisch aufbereiten :)
-Unter MacOS X kann die MAC-Adresse mit den ,,Apple System Profiler''
-ermittelt werden: %screenshot mini
-Unter älteren Systemen (Mac OS 9.22 und dessen Vorgänger) kann 
-die MAC--Adresse ermittelt werden, indem man das
-Kontrollfeld "`TCP/IP"' aufruft und dessen INFO-Button anw"ahlt. Die hier
-angegebene "`Hardware Adresse"' ist die MAC--Adresse. Alternativ kann die
-MAC--Adresse auch mit dem "`Apple System Profiler"' im Apple--Men"u ermittelt
-werden. 
+%Unter MacOS X kann die MAC-Adresse mit den ,,Apple System Profiler''
+%ermittelt werden: %screenshot mini
+%Unter älteren Systemen (Mac OS 9.22 und dessen Vorgänger) kann 
+%die MAC--Adresse ermittelt werden, indem man das
+%Kontrollfeld "`TCP/IP"' aufruft und dessen INFO-Button anw"ahlt. Die hier
+%angegebene "`Hardware Adresse"' ist die MAC--Adresse. Alternativ kann die
+%MAC--Adresse auch mit dem "`Apple System Profiler"' im Apple--Men"u ermittelt
+%werden. 
 \newpage
 \subsubsection*{Unix/Linux}
 \small{Vorbemerkung: Je nach Distribution kann es kleinere Unterschiede
@@ -66,7 +79,7 @@ sollte sich leicht an andere Distributionen anpassen lassen.} Unter
 dann den Befehl \texttt{ifconfig} ein. Unter Umständen muss der
 absolute Pfad \texttt{ifconfig} benutzt werden. Die Ausgabe könnte so
 aussehen: %insert screenshot mit englischer und deutscher Form!
-\centergraphics{mac_linux}
+\centergraphics{bilder/mac_linux}
 Aufpassen muss man nun, dass man nicht die falsche MAC-Adresse
 notiert, z.B. von der WLAN-Karte.
 Gesucht ist die MAC-Adresse der Ethernetkarte. Diese fängt zumeist mit
