--- a/dienste/www.tex
+++ b/dienste/www.tex
@@ -5,7 +5,10 @@ Im \snev wird ein eigener \glossar Server f"ur das \glossar World Wide Web
 betrieben. Dieser dient unter anderem der Information "uber das Wohnheim An der
 Schunter, vorhandene M"oglichkeiten zum Arbeiten und Leben sowie die dort
 stattfindenden Veranstaltungen. Die Website ist unter dem URL 
-\url{http://www.schunternet.de/} zu erreichen. 
+\url{http://www.schunternet.de/} zu erreichen.  Sie wird auf dem
+Benutzerserver gehostet. Somit können Benutzer auch ihre eigene
+Webseite einrichten, die Vorgehensweise ist auf Seite
+\pageref{wwwprivate} beschrieben.
 
 % Um den Datenverkehr %"uber die Funkbridge zum RZ 
 % gering zu halten und den
@@ -36,3 +39,8 @@ stattfindenden Veranstaltungen. Die Website ist unter dem URL
 %Wer sich von der steigenden Anzahl an Werbebannern im Web gest"ort f"uhlt,
 %kann auch den Port/Anschluss \verb#8000# eintragen und sich von dem dort
 %h"orenden Junkbuster einen Gro"steil der Banner ausfiltern lassen.
+
+%%% Local Variables: 
+%%% mode: latex
+%%% TeX-master: "../Netzeinfuehrung"
+%%% End: 
