--- a/dienste/usenet.tex
+++ b/dienste/usenet.tex
@@ -13,19 +13,20 @@ kann im \snev der \glossar Server\footnote{Tats"achlich l"auft im lokalen
   Nachrichten beschleunigt erfolgen. Nachteilig sind fehlender Einfluss auf
   die Haltezeiten und langsamerer Erstzugriff auf die Informationen.}
 \url{news.schunter.etc.tu-bs.de} genutzt werden (Standard--Port ist 119).
-Dieser stellt neben den im DFN (\url{news.tu-bs.de}) aufliegenden
-Newsgruppen auch die Hierarchie % corel.*, intel.*, linux.*, microsoft.*,
+Dieser stellt neben die im DFN (\url{news.tu-bs.de}) aufliegenden
+Newsgruppen% auch die Hierarchie % corel.*, intel.*, linux.*, microsoft.*,
 %netscape.*, star\-office.* und 
-schunter.* zur Verf"ugung.
+%schunter.* 
+zur Verf"ugung.
 
-Diese ist die lokale Hierarchie unseres Wohnheims mit den Gruppen 
-\begin{tabbing}
-  schunter.general.testnetmm\=\kill
-  \url{schunter.general} \> Allgemeines im Wohnheim an der Schunter. \\
-  \url{schunter.net} \> Das Netzwerk. \\
-  \url{schunter.test} \> Tests nur hier!. 
-\end{tabbing}
-
+%Diese ist die lokale Hierarchie unseres Wohnheims mit den Gruppen 
+%%\begin{tabbing}
+%  schunter.general.testnetmm\=\kill
+%  \url{schunter.general} \> Allgemeines im Wohnheim an der Schunter. \\
+%  \url{schunter.net} \> Das Netzwerk. \\
+%  \url{schunter.test} \> Tests nur hier!. 
+%\end{tabbing}
+%\newpage
 Im Usenet herrschen andere Gepflogenheiten als in Chatrooms oder auf
 WWW--Boards. Empfohlen wird, zun"achst 
 \begin{tabbing}
@@ -45,13 +46,16 @@ nutzbar.
 
 Zwingend erforderlich ist die Verwendung einer g"ultigen E-Mail--Adresse nach
 \glossar RfC 1036. Um sich vor unerw"unschter Werbemail (Bulk E-Mail, SPAM) zu
-sch"utzen ist es eine sehr gute Idee, sich z.B. entweder
-\begin{enumerate}
-  \item[a)] eine kostenlose Extra--Mailadresse f"ur das Usenet einzurichten
-    (z.B bei Googe Mail oder GMX) die man dann gar nicht weiter nutzt, oder aber
-  \item[b)] sich eine kostenlose E-Mail--Adresse z.B bei \url{http://www.gmx.de} f"ur
-    Mail \& News zu besorgen.
-\end{enumerate}
+sch"utzen ist es eine sehr gute Idee, sich eine 
+%\begin{enumerate}
+ % \item[a)]
+ eine kostenlose Extra--Mailadresse f"ur das Usenet einzurichten
+    (z.B bei Googe Mail oder GMX) die man dann für nichts anderes
+    nutzt.
+% oder aber
+ % \item[b)] sich eine kostenlose E-Mail--Adresse z.B bei \url{http://www.gmx.de} f"ur
+  %  Mail \& News zu besorgen.
+%\end{enumerate}
 Auf gar keinen Fall darf mit einer ung"ultigen bzw. nicht erreichbaren
 E-Mail--Adresse gearbeitet werden.
 
@@ -66,3 +70,8 @@ E-Mail--Adresse gearbeitet werden.
 %    GMX verbleiben k"onnen, diese Adresse also stets g"ultig ist und nicht
 %    st"andig umge"andert werden muss.
 %\end{enumerate}
+
+%%% Local Variables: 
+%%% mode: latex
+%%% TeX-master: "../Netzeinfuehrung"
+%%% End: 
