--- a/anhang/gebuehrenordnung.tex
+++ b/anhang/gebuehrenordnung.tex
@@ -3,7 +3,7 @@
 \section{Geb"uhrenordnung des SchunterNet e.V.}
 \label{gebuehr}
 
-{\small Stand: 07. September 2009}
+{\small Stand: 24. November 2010}
 
 \begin{enumerate}
 \item Eine Anschlussgeb"uhr wird nicht erhoben.
@@ -11,13 +11,19 @@
 \item Die Nutzungsgebühr (Monatsgebühr) wird dynamisch erhoben. Sie wird
   abhängig vom Finanzbedarf des Vereins sowie der Anzahl der Nutzer
   angepasst und sollte einen Betrag von 13,-- \euro (in Worten: dreizehn
-  Euro) nicht überschreiten. Derzeit ist die Gebühr auf 8,-- \euro (in Worten: acht Euro) festgelegt.
-\item Zur Absicherung eventueller durch den Nutzer verursachter Forderungen Dritter an den Verein, ist eine Kaution in Höhe der aktuellen monatlichen Nutzungsgebühr zu hinterlegen
+  Euro) nicht überschreiten. Derzeit ist die Gebühr auf 6,-- \euro (in Worten: sechs Euro) festgelegt.
+\item Bei der Freischaltung des Zugangs wird für den laufenden Monat eine volle Monatsgebühr erhoben. Gleichzeitig ist die Nutzungsgebühr für den folgenden Monat im voraus zu entrichten. Zur Absicherung eventueller durch den Nutzer verursachter Forderungen Dritter an den Verein, ist eine Kaution von 6€ zu hinterlegen.
+%Zur Absicherung eventueller durch den Nutzer verursachter Forderungen Dritter an den Verein, ist eine Kaution in Höhe der aktuellen monatlichen Nutzungsgebühr zu hinterlegen
 
 \item Alle Folgezahlungen sind bis 15. des Vormonats f"ur den
   entsprechenden Monat einzuzahlen (jeweils eine Monatsgeb"uhr).
 
-\item Die Zahlung der Nutzungsgebühr erfolgt in erster Linie per Lastschrifteinzugsverfahren. Bei Barzahlungen wird eine zusätzliche Gebühr von 2,-- \euro je Zahlung erhoben. Ausnahme stellt die erste Barzahlung dar, bei der keine Barzahlungsgebühr erhoben wird.
+\item  
+Die Zahlung der Nutzungsgebühr erfolgt in erster Linie per
+Lastschrifteinzugsverfahren. Bei Barzahlungen wird eine zusätzliche
+Gebühr von 2,-- € je Zahlung erhoben. Ausnahme stellt die erste
+Barzahlung dar, bei der keine Barzahlungsgebühr erhoben wird.
+
 \item Schlägt die Abbuchung aus Gründen, die der Nutzer zu vertreten hat, fehl, ist er verpflichtet die anfallenden Bankgebühren sowie die nichteingezogenen Gebühren in Bar zu begleichen. Dabei entfällt die Barzahlungsgebühr in Höhe von 2,-- \euro.
 \item  Die Nutzungsgebühren werden in erster Linie zur Deckung der laufenden Kosten verwendet. Eventuelle Überschüsse werden für Reparaturen und weitere Investitionen genutzt.
 
@@ -37,3 +43,8 @@
 \item "Anderungen dieser Geb"uhrenordnung sind in den halbj"ahrlichen
   Mitgliederversammlungen m"oglich.
 \end{enumerate}
+
+%%% Local Variables: 
+%%% mode: latex
+%%% TeX-master: "../Netzeinfuehrung"
+%%% End: 
