--- a/anhang/glossar.tex
+++ b/anhang/glossar.tex
@@ -26,7 +26,7 @@
   \item[FTP] Kopieren von (gro"sen) Dateien zwischen Rechnern mittels 
       \textbf{F}ile \textbf{T}ransfer \textbf{P}rotocol auf TCP/IP,
       von SFTP abgelöst.
-  \item{SFTP} Kopieren von großen Dateien zwischen Rechnern mittels
+  \item[SFTP] Kopieren von großen Dateien zwischen Rechnern mittels
     \textbf{S}SH \textbf{F}ile  \textbf{T}ransfer \textbf{P}rotocol
     auf TCP/IP
   \item[Homepage] Startseite eines Informationsangebots im World Wide Web
@@ -52,6 +52,9 @@
     weiterreicht (proxying). Dadurch werden die Zugriffszeiten auf schon im
     Cache befindliche Daten enorm verbessert und die "Ubertragungswege aus dem
     Internet entlastet.
+  \item[putty] Ein nettes, kleines Terminalprogramm für Windows und
+    Linux. Es unterstützt under anderen \glossar ssh und \glossar
+    telnet \\Download:   \url{http://www.chiaark.greenend.org.uk/~sgtatham/putty/}
   \item[RfC] \textbf{R}equest \textbf{f}or \textbf{C}omment sind die
     Dokumente, in denen die Standards des Internet definiert sind.
   \item[Server] Programm oder Rechner, welcher eine bestimmte Serviceleistung
@@ -68,7 +71,7 @@
   \item[telnet] Internet-Protokoll f"ur einen Dialog auf einem anderen
     (UNIX-)Rechner, Einloggen auf irgendeinem "offentlichen UNIX-Host,
     mittlerweile durch ssh abgelöst
-  \item[ssh] nternet-Protokoll f"ur einen Dialog auf einem anderen
+  \item[ssh] Internet-Protokoll f"ur einen Dialog auf einem anderen
     (UNIX-)Rechner, Einloggen auf irgendeinem "offentlichen UNIX-Host,
     anders als bei telnet  wird hierbei die Verbindung
     verschlüsselt. Basis für SFTP.
@@ -81,9 +84,17 @@
     tausend Diskussionsgruppen (newsgroups) weltweit, entstanden 1979, lokale
     Administrationen f"ur spezifische Diskussionsgruppen mit regionaler
     Bedeutung
+  \item[WinSCP] Ein Client für die Protokolle \glossar FTP und
+    \glossar SFTP für Windows.\\
+    Download: \url{http://winscp.net/}
   \item[WWW] \textbf{W}orld \textbf{W}ide \textbf{W}eb ("`Surfen"' im
     Internet), das umfassende und f"uhrende Informationssystem, www ist
     multimedial, d.h.\  es integriert Schrift, Bild, Ton, bewegte Bilder,
     Video-Clip, Radio/TV Live, wenn entsprechende Multimedia-Tools installiert
-    sind
+    sind.
 \end{description}
+
+%%% Local Variables: 
+%%% mode: latex
+%%% TeX-master: "../Netzeinfuehrung"
+%%% End: 
