--- a/anmeldung/nutzervertrag.tex
+++ b/anmeldung/nutzervertrag.tex
@@ -7,12 +7,17 @@ pers"onlichen und technischen Daten der Nutzer bzw.\  deren Computer im
 zum anderen als Nutzervertrag der Anerkennung der Teilnahmeregeln durch den
 Nutzer. Gleichzeitig erfolgt die Aufnahme in den \snev als passives Mitglied.
 % Schön wäre es... Anpassung an den Stand Umbau Haus3?
-\bf Der Antrag kann den Prospektst"andern entnommen werden, welche sich in jedem
-Haus neben den Briefk"asten befinden, und ist vollst"andig ausgef"ullt und
-unterschrieben in den Briefkasten des Vereins in Haus 3 einzuwerfen. Eine
-Postscriptversion ist auch unter
+\bf Üblicherweise erhält man den  Antrag beim Einzug von der
+Hausverwaltung oder bei der wöchentlichen \glossar Sprechstunde. Er ist vollst"andig ausgef"ullt und
+unterschrieben in den Briefkasten des Vereins am Clubhaus einzuwerfen. Eine
+PDF-Version ist auch unter
 \url{http://www.schunternet.de/SchunterNet/Verein/Dokumente/} zu
 finden.
 
 \rm Es folgen einige Hinweise zum Ausf"ullen des Antrags und zu den Hintergr"unden.
 
+
+%%% Local Variables: 
+%%% mode: latex
+%%% TeX-master: "../Netzeinfuehrung"
+%%% End: 
