Aktuelle gebührenordnung, aktuelles pdf

--- a/anhang/gebuehrenordnung.tex
+++ b/anhang/gebuehrenordnung.tex
@@ -12,7 +12,11 @@
   abhängig vom Finanzbedarf des Vereins sowie der Anzahl der Nutzer
   angepasst und sollte einen Betrag von 13,-- \euro (in Worten: dreizehn
   Euro) nicht überschreiten. Derzeit ist die Gebühr auf 6,-- \euro (in Worten: sechs Euro) festgelegt.
-\item Bei der Freischaltung des Zugangs wird für den laufenden Monat eine volle Monatsgebühr erhoben. Gleichzeitig ist die Nutzungsgebühr für den folgenden Monat im voraus zu entrichten. Zur Absicherung eventueller durch den Nutzer verursachter Forderungen Dritter an den Verein, ist eine Kaution von 6€ zu hinterlegen.
+\item Bei der Freischaltung des Zugangs wird für den laufenden Monat
+  eine volle Monatsgebühr erhoben. Gleichzeitig ist die Nutzungsgebühr
+  für den folgenden Monat im voraus zu entrichten. Zur Absicherung
+  eventueller durch den Nutzer verursachter Forderungen Dritter an den
+  Verein, ist eine Kaution von 6 \euro zu hinterlegen.
 %Zur Absicherung eventueller durch den Nutzer verursachter Forderungen Dritter an den Verein, ist eine Kaution in Höhe der aktuellen monatlichen Nutzungsgebühr zu hinterlegen
 
 \item Alle Folgezahlungen sind bis 15. des Vormonats f"ur den
@@ -21,7 +25,7 @@
 \item  
 Die Zahlung der Nutzungsgebühr erfolgt in erster Linie per
 Lastschrifteinzugsverfahren. Bei Barzahlungen wird eine zusätzliche
-Gebühr von 2,-- € je Zahlung erhoben. Ausnahme stellt die erste
+Gebühr von 2,-- \euro je Zahlung erhoben. Ausnahme stellt die erste
 Barzahlung dar, bei der keine Barzahlungsgebühr erhoben wird.
 
 \item Schlägt die Abbuchung aus Gründen, die der Nutzer zu vertreten hat, fehl, ist er verpflichtet die anfallenden Bankgebühren sowie die nichteingezogenen Gebühren in Bar zu begleichen. Dabei entfällt die Barzahlungsgebühr in Höhe von 2,-- \euro.
